--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,6 @@
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/phicon.ico" rel="shortcut icon" type="image/x-icon">
-  <link href="images/webclip.png" rel="apple-touch-icon">
   <style>
   body {
   -moz-font-feature-settings: "liga" on;
@@ -34,7 +33,7 @@
         <a href="index.html" class="nav-link w-nav-link">Purpose</a>
         <a href="services.html" class="nav-link w-nav-link">Practice</a>
         <a href="about.html" class="nav-link w-nav-link">People</a>
-        <a href="about.html" class="nav-link w-nav-link">Place</a>
+        <a href="contact.html" class="nav-link w-nav-link">Place</a>
         <div class="bullet"></div>
         <a href="#" class="nav-link w-nav-link">Sign in</a>
         <a href="#" class="navigation-button w-button">Book an Appointment</a>
@@ -115,5 +114,6 @@
     </div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=606e404c3efdb1e53dc3e969" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  <script src="js/main.js" type="text/javascript"></script>
 </body>
 </html>
