Few CSS tweaks to feature.container.item

--- a/index.html
+++ b/index.html
@@ -59,8 +59,23 @@
           <div role="listitem" class="collection-item w-dyn-item">
             <div class="feature-item-container">
               <div class="feature-icon"><img src="images/undraw_collab_8oes.svg" width="78" alt=""></div>
-              <h3 class="h3"></h3>
-              <p class="paragraph cc-gray"></p>
+              <h3 class="h3">Got Family? Bring them too! We have room for them also.</h3>
+              <p class="paragraph cc-gray">Can't meet in person we have Telehealth options available as well. Visit our <span><a href="file:///C:/Users/jovau/p2-ph-jewing/services.html" title="Services">Services </a>page.</span></p>
+            </div>
+            <div class="feature-item-container">
+              <div class="feature-icon"><img src="images/undraw_in_thought_gjsf.svg" width="78" alt=""></div>
+              <h3 class="h3">Feeling Lost. Let us help up you with a map.</h3>
+              <p class="paragraph cc-gray">Can't meet in person we have Telehealth options available as well. Visit our <span><a href="file:///C:/Users/jovau/p2-ph-jewing/services.html" title="Services">Services </a>page.</span></p>
+            </div>
+            <div class="feature-item-container">
+              <div class="feature-icon"><img src="images/undraw_Meditating_re_aiqa.svg" width="78" alt=""></div>
+              <h3 class="h3">Need to unpack a few things. Come take a load off.</h3>
+              <p class="paragraph cc-gray">Can't meet in person we have Telehealth options available as well. Visit our <span><a href="file:///C:/Users/jovau/p2-ph-jewing/services.html" title="Services">Services </a>page.</span></p>
+            </div>
+            <div class="feature-item-container">
+              <div class="feature-icon"><img src="images/undraw_remote_meeting_cbfk.svg" width="78" alt=""></div>
+              <h3 class="h3">We are fully prepared for Telehealth. Try it now with your free consultation.</h3>
+              <p class="paragraph cc-gray">If you can't meet by Telehealth, we definitely have other options. Visit our <span><a href="file:///C:/Users/jovau/p2-ph-jewing/services.html" title="Services">Services </a>page.</span></p>
             </div>
           </div>
         </div>
