--- a/services.html
+++ b/services.html
@@ -14,7 +14,7 @@
   <script type="text/javascript">WebFont.load({  google: {    families: ["Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic","Libre Franklin:200,300,regular,600,800,900","IBM Plex Mono:regular","Titillium Web:regular"]  }});</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
-  <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon">
+  <link href="images/phicon.ico" rel="shortcut icon" type="image/x-icon">
   <style>
   body {
   -moz-font-feature-settings: "liga" on;
@@ -50,7 +50,7 @@
           <a href="#" class="h3 cc-header">How can we help?</a>
           <div class="cta-line cc-header"></div>
         </div>
-        <h1 class="h1">We do it all, because we&#x27;ve seen it all.</h1>
+        <h1 class="h1">We do it all, because we've seen it all.</h1>
         <p class="paragraph">People House therapist are ready to help with any thing that you need. We are devoted to learning just as much as we are devoted to serving you.</p>
       </div>
     </div>
